# Moritz

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
include/: common.hh  network.hh  point.hh  species.hh  speciestree.hh  tbranch.hh  utils.hh
include/wagner/: common.hh  io.hh  model.hh  n-sphere.hh  network.hh  point.hh  rng.hh  simulation.hh  species.hh  speciestree.hh  splitmix64.hh  tbranch.hh  utils.hh  xorshift1024.hh  xorshift128.hh
python/: grab_seeds.py
src/: CMakeLists.txt  main.cc  point.cc  simulation.cc  species.cc  speciestree.cc  tbranch.cc
test/: CMakeLists.txt  n-sphere_spec.cc
